--- a/index.mdx
+++ b/index.mdx
@@ -18,6 +18,8 @@ import {
   NavBar,
 } from '@redocly/developer-portal/ui';
 
+import { Counter } from './components/Counter.tsx'
+
 import icon1 from './images/icon1.png';
 import launchFastIcon from './images/launch-fast.svg';
 import icon3 from './images/icon3.png';
@@ -28,7 +30,8 @@ export default LandingLayout;
 
 <Jumbotron>
   <NavBar location={props.location} standalone={false} />
-  <H1>Redocly training</H1>
+  <NavBar location={props.location} standalone={false} />
+  <H1 style={{ color: 'black' }}>Redocly training</H1>
   <H2>A starter developer portal with training exercises</H2>
   <Flex p={20} justifyContent="center">
     {/* <Button size="xlarge" to="https://app.redoc.ly">
