fix broken link issue

--- a/index.mdx
+++ b/index.mdx
@@ -37,7 +37,7 @@ export default LandingLayout;
     {/* <Button size="xlarge" to="https://app.redoc.ly">
       Redocly app
     </Button> */}
-     <Button variant="outlined" size="xlarge" to="developer-portal/index.md">
+     <Button variant="outlined" size="xlarge" to="developer-portal/welcome.mdx">
       Get started
     </Button>
     {/* <Button variant="outlined" size="xlarge" to="https://redoc.ly/docs">
