--- a/index.mdx
+++ b/index.mdx
@@ -99,5 +99,11 @@ export default LandingLayout;
         an usu.
     </WideTile>
   </FlexSection>
+  <script>
+  {/* (function () {
+  setTimeout(() => document.querySelector('#gatsby-focus-wrapper').style.filter = 'grayscale(100%)', 1000)
+})(); */}
+
+</script>
 </Box>
 
